# ecoton

./: .gitignore  LICENSE  README.md  pyproject.toml
ecoton/: __init__.py  analytic_metatranscripts.py  cli.py  compute_cell_overlaps.py  compute_colocalization_graph.py  compute_metatranscripts.py  compute_metatranscripts_old.py  compute_niche_maps.py  ecoton_script.py  enrichment.py  permute_metatranscripts.py  plot_colocalization_modules.py  plot_graph_umap.py  plot_niche_maps.py  process_colocalization_graph.py  statistics_niche_maps.py
ecoton.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ecoton/.ipynb_checkpoints/: analytic_metatranscripts-checkpoint.py
ecoton/resources/: mh.all.v2026.1.Mm.symbols.gmt.txt
scripts/: README_demo.md  cell_statistics.py  run_demo_pipeline.py
