[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoton"
version = "0.2.5"
description = "Expression colocalization of transcripts for niche discovery"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "igraph>=0.10.0",
    "umap-learn>=0.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "adjustText>=0.7.0",
    "scikit-learn>=1.0.0",
    "archetypes>=0.1.0",
    "gseapy>=0.12.0",
]

[project.urls]
Repository = "https://github.com/pritykinlab/ecoton"

[project.scripts]
ecoton = "ecoton.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"ecoton" = ["resources/*"]
